--- a/list.html
+++ b/list.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<form action="action_page.php">
+<form action="list.php" method="post">
   Password:<br>
   <input type="password" name="password" value="Mouse">
   <br><br>
