--- a/Project/index.html
+++ b/Project/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<frameset rows="25%,75%" noresize>
-  <frame src="header.html" scrolling = "no">
+<frameset rows="30%,70%" >
+  <frame src="header.html" scrolling = "no" noresize="noresize">
   <frame src="start.html">
 </frameset>
 </html>
