--- a/Project/header.html
+++ b/Project/header.html
@@ -6,41 +6,33 @@ body
 {
 background-color:#6666ff;
 }
-#image {
-    line-height:25px;
-    height:20%;
-    width:20%;
+img {
     float:left;
-	vertical-align:top;	
+	vertical-align:top;
+    margin-top:0px;	
 }
-#heading {
+h1 {
     text-align:center;
-	font-size: 48px;
+	font-size: 72px;
 	font-color:white;
-	height:80%;
-    width:80%;
-    float:right;
-    align:center;
+    float:center ;
     vertical-align:top;
+	margin-top:0px;	
 }
 </style>
 </head>
 <body>
-
-<div id = "image">
-
-<img src="Logo.png"; alt="Logo";height="20%";width="20%";style="float:center";>
-
-</div>
-
-<div id = "heading">
-<br><br>
-<h1 style="color:white;text-align:center;"><pre>      LingoPedia</pre></h1>
-
-</div>
-
- 
-</div>
-
+<table>
+<tr>
+<td>
+<img src="Logo.png"; alt="Logo";height="25%";width="15%";style="float:left";></td>
+<td>
+<br>
+<h1 style="color:white;float:center"><pre>LingoPedia</pre></h1></td>
+<td>
+<a href="start.html"; style="float:right";><img src = "Home-Button.png"; alt = "Home";style = "float:right"></a>
+</td>
+</tr>
+</table>
 </body>
 </html>
