--- a/Project/header.html
+++ b/Project/header.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<a!DOCTYPE html>
 <html>
 <head>
 <style>
@@ -10,29 +10,26 @@ img {
     float:left;
 	vertical-align:top;
     margin-top:0px;	
+	white-space:nowrap;
+	display:inline;
 }
 h1 {
     text-align:center;
 	font-size: 72px;
 	font-color:white;
+	font-family:"Georgia";
     float:center ;
+    align:center;
     vertical-align:top;
-	margin-top:0px;	
+	display:inline;
 }
 </style>
 </head>
 <body>
-<table>
-<tr>
-<td>
-<img src="Logo.png"; alt="Logo";height="25%";width="15%";style="float:left";></td>
-<td>
-<br>
-<h1 style="color:white;float:center"><pre>LingoPedia</pre></h1></td>
-<td>
-<a href="start.html"; style="float:right";><img src = "Home-Button.png"; alt = "Home";style = "float:right"></a>
-</td>
-</tr>
-</table>
+
+<img src="Logo.png"; alt="Logo";height="15%";width="15%";style="float:left";>
+<br><br>
+<h1 style="color:white";>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspLingoPedia</h1>
+<a href = "start.html"; target = "main"; style = "float:right";><img src = "Home-Button.png" alt = "Home"></a>
 </body>
 </html>
