--- a/Project/index.html
+++ b/Project/index.html
@@ -2,6 +2,6 @@
 <html>
 <frameset rows="30%,70%" >
   <frame src="header.html" scrolling = "no" noresize="noresize">
-  <frame src="start.html">
+  <frame src="start.html" name = "main">
 </frameset>
 </html>
