--- a/Project/start.html
+++ b/Project/start.html
@@ -39,7 +39,7 @@ a:active {
 <br><br>
 <a href="sign_up.php" style = "font-size:24px;">Sign-up</a>
 <br><br>
-<a href="welcome.html" style = "font-size:24px;">Continue as Guest</a>
+<a href="redirect.html" style = "font-size:24px;">Continue as Guest</a>
 <br>
 </p>
 </body>
